fix: typo error in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         cache: true
 
     - name: Download Dependencies
-      run: go mod donwload
+      run: go mod download
 
     - name: Vet Code
       run: go vet ./...
